[#907] Make XML Bind pkgs optional for JPMS/OSGi
Signed-off-by: Andy McCright <j.andrew.mccright@gmail.com>